--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 **/__pycache__/
 
 .cache
-.pytest_cache/
+**/.pytest_cache/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -17,3 +17,6 @@ ipython_config.py
 
 # mkdocs documentation
 /site
+
+# snakemake file
+.snakemake
