Added submit rule and more changes

--- a/clm_scripts/caseconfig.cfg
+++ b/clm_scripts/caseconfig.cfg
@@ -3,4 +3,5 @@ CTSMDIR="/glade/u/home/amans/ctsm5.2.mksurfdat",
 CASEDIR="/glade/derecho/scratch/amans",
 RES="f09_g16",
 COMPSET="I2000Clm51Bgc",
-XMLCONFIG="/glade/u/home/amans/tools/clm-workflow/clm_scripts/xmlconfig.cfg"
+XMLCONFIG="/glade/u/home/amans/tools/clm-workflow/clm_scripts/xmlconfig.cfg",
+ARCHIVE="/glade/derecho/scratch/amans/archive"
