--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: clm-workflow
 site_url: https://amansnama.github.io/clm-workflow/
 
 theme:
-  name: "material"
+  name: "readthedocs"
 
 plugins:
   - search
