Added mkdocs-material-extensions to requirements.txt

--- a/.github/workflows/deploy_doc.yml
+++ b/.github/workflows/deploy_doc.yml
@@ -1,7 +1,10 @@
-name: build
+name: Build and deploy docs
 on:
   push:
     branches:
+      - main
+      - deploy-docs
+    pull_request:
       - main
 jobs:
   deploy:
