Deploy docs workflow on change to docs/

--- a/.github/workflows/deploy_doc.yml
+++ b/.github/workflows/deploy_doc.yml
@@ -4,8 +4,13 @@ on:
     branches:
       - main
       - deploy-docs
-    pull_request:
+    paths:
+      - docs/**
+  pull_request:
+    branches:
       - main
+    paths:
+      - docs/**
 jobs:
   deploy:
     runs-on: ubuntu-latest
