Fixed cfg read and added savepath

--- a/analysis_scripts/scripts_to_run.cfg
+++ b/analysis_scripts/scripts_to_run.cfg
@@ -1,4 +1,5 @@
 HYDROBOOKSDIR="/glade/u/home/amans/tools/hydrobooks"
+OUTDIR="/glade/u/home/amans/tools/clm-workflow/analysis_scripts/executed_scripts/"
 BOOKS="water_budget/ET/ET.ipynb",
     "water_budget/Runoff/runoff_basin_wise.ipynb",
     "water_budget/TWS/GRACE_TWS_subbasin.ipynb"
