Added 2 amanspylib and hydrobooks as submodules

--- a/analysis_scripts/scripts_to_run.cfg
+++ b/analysis_scripts/scripts_to_run.cfg
@@ -1,5 +1,9 @@
 HYDROBOOKSDIR="/glade/u/home/amans/tools/hydrobooks"
+
+# Consider adding OUTDIR to gitignore
+# executed_scripts is ignored by default
 OUTDIR="/glade/u/home/amans/tools/clm-workflow/analysis_scripts/executed_scripts/"
+
 BOOKS="water_budget/ET/ET.ipynb",
-    "water_budget/Runoff/runoff_basin_wise.ipynb",
-    "water_budget/TWS/GRACE_TWS_subbasin.ipynb"
+    # "water_budget/Runoff/runoff_basin_wise.ipynb",
+    # "water_budget/TWS/GRACE_TWS_subbasin.ipynb"
