--- a/analysis_scripts/scripts_to_run.cfg
+++ b/analysis_scripts/scripts_to_run.cfg
@@ -1,8 +1,9 @@
-HYDROBOOKSDIR="/glade/u/home/amans/tools/hydrobooks"
+CASENAME="GW-I2000Clm50BgcCrop_MRB_0.5_20SL_49.2m_exp_baseflow"
+HYDROBOOKSDIR="./hydrobooks"
 
 # Consider adding OUTDIR to gitignore
 # executed_scripts is ignored by default
-OUTDIR="/glade/u/home/amans/tools/clm-workflow/analysis_scripts/executed_scripts/"
+OUTDIR="./executed_scripts/"
 
 BOOKS="water_budget/ET/ET.ipynb",
     # "water_budget/Runoff/runoff_basin_wise.ipynb",
