Pass argument to notebooks

--- a/analysis_scripts/scripts_to_run.cfg
+++ b/analysis_scripts/scripts_to_run.cfg
@@ -6,5 +6,5 @@ HYDROBOOKSDIR="./hydrobooks"
 OUTDIR="./executed_scripts/"
 
 BOOKS="water_budget/ET/ET.ipynb",
-    # "water_budget/Runoff/runoff_basin_wise.ipynb",
+    "water_budget/Runoff/runoff_basin_wise.ipynb",
     # "water_budget/TWS/GRACE_TWS_subbasin.ipynb"
