Workflow to analyze CLM outputs (#7)
* Created execute notebook function

* Fixed cfg read and added savepath

* Added 2 amanspylib and hydrobooks as submodules

* Working analysis_script

* Pass argument to notebooks

* Send email when snakemake is done

* Initiated analysis workflow tutorial doc

--- a/analysis_scripts/scripts_to_run.cfg
+++ b/analysis_scripts/scripts_to_run.cfg
@@ -1,4 +1,10 @@
-HYDROBOOKSDIR="/glade/u/home/amans/tools/hydrobooks"
+CASENAME="GW-I2000Clm50BgcCrop_MRB_0.5_20SL_49.2m_exp_baseflow"
+HYDROBOOKSDIR="./hydrobooks"
+
+# Consider adding OUTDIR to gitignore
+# executed_scripts is ignored by default
+OUTDIR="./executed_scripts/"
+
 BOOKS="water_budget/ET/ET.ipynb",
     "water_budget/Runoff/runoff_basin_wise.ipynb",
-    "water_budget/TWS/241001_GRACE_TWS_subbasin.ipynb"
+    # "water_budget/TWS/GRACE_TWS_subbasin.ipynb"
