Create intermediate rule files for snakemake

--- a/clm_scripts/caseconfig.cfg
+++ b/clm_scripts/caseconfig.cfg
@@ -1,6 +1,6 @@
 CASENAME="Testcase",
 CTSMDIR="/glade/u/home/amans/ctsm5.2.mksurfdat",
-CASEDIR="/glade/derecho/scratch/amans",
+CASEDIR="/glade/u/home/amans",
 RES="f09_g16",
 COMPSET="I2000Clm51Bgc",
 XMLCONFIG="/glade/u/home/amans/tools/clm-workflow/clm_scripts/xmlconfig.cfg",
